Skip to content
GitLab
Projects
Groups
Snippets
/
Help
Help
Support
Community forum
Keyboard shortcuts
?
Submit feedback
Contribute to GitLab
Sign in / Register
Toggle navigation
Menu
Open sidebar
GNOME
Settings
Issues
#248
Closed
Open
Issue created
Oct 24, 2018
by
Andrea Azzarone
@azzaronea
🚴
Assertion failed in cc_shell_model_set_panel_visibility
To reproduce:
Modify the OnlyShowIn/NotShowIn filed in the wifi panel's desktop file to not show it in your current desktop.
Open gnome-control-center