main: Prevent running outside GNOME

GNOME Settings relies on GNOME-specific services, and we cannot
guarantee they'll be available on non-GNOME sessions.

Thus, prevent Settings from running when the current desktop is
not GNOME.

Closes https://gitlab.gnome.org/GNOME/gnome-control-center/issues/248