shell/main.c
@@ -35,6 +35,12 @@
 
 #include "cc-application.h"
 
+static gboolean
+is_gnome (void)
+{
+  return g_strcmp0 (g_getenv ("XDG_CURRENT_DESKTOP"), "GNOME") == 0;
+}
+
 int
 main (int    argc,
       char **argv)
@@ -44,6 +50,13 @@ main (int    argc,
   bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
   bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
   textdomain (GETTEXT_PACKAGE);
+
+  /* Prevent running outside GNOME */
+  if (!is_gnome ())
+    {
+      g_critical (_("GNOME Settings cannot run outside the GNOME Desktop Environment, exiting"));
+      return 1;
+    }
 
 #ifdef GDK_WINDOWING_X11
   XInitThreads ();
